--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <body>
     <header>
-      <a href="./index.html">Website logo</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/">Studio</a></li>
           <li><a href="/">Portfolio</a></li>
@@ -23,6 +23,7 @@
         </ul>
       </address>
     </header>
+
     <main>
       <!-- #region Button -->
       <section>
@@ -33,9 +34,10 @@
 
       <!-- #region Descriptions -->
       <section>
+        <h2>List</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution. Bring the key message to the
@@ -47,7 +49,7 @@
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution. Bring the key message to the
@@ -59,7 +61,7 @@
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution. Bring the key message to the
@@ -71,7 +73,7 @@
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution. Bring the key message to the
@@ -136,7 +138,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">Website logo</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
